fixed an scroll bar showing on small screen

--- a/FrontEnd/index.css
+++ b/FrontEnd/index.css
@@ -73,7 +73,7 @@ button:hover {
 }
 
 .closeBtn{
-	margin-top: 50px;
+	margin-top: 30px;
 	width: 100px;
 	padding: 10px 0;
 	background:var(--text_color);
@@ -185,7 +185,7 @@ button:hover {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%) scale(0.1);
-	padding: 20px 30px 30px;
+	padding: 20px 30px 20px;
 	color:var(--text_color);
 	visibility: hidden;
 	transition: transform 0.4s, top 0.4s;
